# ltr

./: .gitignore  README.md  pyproject.toml
examples/: README.md  attention_analysis_example.py  backpatching_example.py  behavioral_analysis_example.py  clustering_example.py  colour_emotion_ltr.py  distr_sematics_example.py  ds_v3.py  entity_analysis_example.py  hall_test.py  huggingface_example.py  logit_lens_example.py  ltr_eval_v1.py  ltr_example.py  patching_control_example.py  patchscopes_example.py  qwen_example.py
explain_hallucinations/: baselines.py  causal_path_tracing_exp.py  distr_semantics_viz.py  dst.py  patchscopes_exp.py  readme.md  run_distr_semantics.py  training_data_distr_semantics.py
notebooks/: Dst_Example_Notebook.ipynb  LTR_Reasoning_LLM (1).ipynb  LTR_Reasoning_LLM.ipynb  ltr_eval_final.ipynb
src/ltr/: __init__.py  attention_analysis.py  autoscoring.py  backpatching.py  behavioral_analysis.py  causal_intervention.py  concept_extraction.py  dst.py  entity_analysis.py  linear_probing.py  logit_lens.py  patching_control.py  patchscopes.py  reasoning_analysis.py  subsequence_analysis.py  visualization.py
