[project]
name = "ltr"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gagan Bhatia", email = "gbhatia880@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "baukit",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "lime>=0.2.0.1",
    "nnsight>=0.4.7",
    "shap>=0.48.0",
    "transformers>=4.52.4",
]

[project.scripts]
ltr = "ltr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }
